fix spacing of comments on post show modal on user show page

--- a/app/assets/stylesheets/modal.css
+++ b/app/assets/stylesheets/modal.css
@@ -185,6 +185,7 @@ body {
 .modal-post-show .comment-table {
   max-height: 397px;
   overflow-x: hidden;
+  justify-content: flex-start;
 }
 
 .modal-post-show > header {
